Modules/WebDashboardModule/ClientApp/src/styles.scss
a {
    color: #0366d6;
}

code {
    color: #e01a76;
}

.btn-primary {
    color: #fff;
    background-color: #1b6ec2;
    border-color: #1861ac;
}

html,
body {
    height: 100%;
}
body {
    margin: 0;
    font-family: Roboto, 'Helvetica Neue', sans-serif;
}

.d-contents {
    display: contents !important;
}

.text-prewrap {
    white-space: pre-wrap;
}

.w-fit-content {
    width: fit-content !important;
}

.mw-50 {
    max-width: 50% !important;
}

.r-0 {
    right: 0 !important;
}

.b-0 {
    bottom: 0 !important;
}

